# EGMTrans

./: .gitattributes  .gitignore  .pyHistory  CHANGELOG.md  CONTRIBUTING.md  EGMTrans.py  EGMTrans_Explorer.aprx  EGMTrans_Explorer.atbx  EGMTrans_Explorer.qgz  LICENSE  README.md  SECURITY.md  download_grids.py  environment.yml  pyproject.toml
.github/workflows/: ci.yml
EGMTrans_Explorer.gdb/: a00000001.TablesByName.atx  a00000001.gdbtable  a00000001.gdbtablx  a00000004.CatItemsByPhysicalName.atx  a00000004.CatItemsByType.atx  a00000004.FDO_UUID.atx  a00000004.freelist  a00000004.gdbtable  a00000004.gdbtablx  a00000006.CatRelsByDestinationID.atx  a00000006.CatRelsByOriginID.atx  a00000006.CatRelsByType.atx  a00000006.FDO_UUID.atx  a00000006.gdbtable  a0000000c.gdbtable  a0000000c.gdbtablx  a0000000c.spx  a0000000d.gdbtable  a0000000d.gdbtablx  a0000000d.spx  a0000000e.gdbtable  a0000000e.gdbtablx  a0000000e.spx  a0000000f.gdbtable  a0000000f.gdbtablx  timestamps
arcgis/: EGMTransToolbox.Tool.pyt.xml  EGMTransToolbox.pyt  EGMTransToolbox.pyt.xml
crs/: dted_header_parser.py  esri_wkt_to_epsg_lookup.py
datums/: README.md  egm96_to_egm2008_delta.tif  us_nga_egm08_1.tif  us_nga_egm08_1_meta.html  us_nga_egm08_25.tif  us_nga_egm96_1.tif  us_nga_egm96_15.tif  us_nga_egm96_1_meta.html
samples/: Copernicus_DSM_10_N06_00_E126_00.xml  INEGI_Mexico_150cm_f13a35e4_DSM.xml
tests/: conftest.py  test_accuracy.py  test_cli.py  test_config.py  test_crs.py  test_file_utils.py  test_flattening.py  test_interpolation.py  test_io.py  test_numba_utils.py  test_transform.py
(+15 files in other folders)
