[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "egmtrans"
version = "1.2.0"
description = "Vertical datum transformation tool for DEMs between WGS84, EGM96, and EGM2008"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Eric Robeck" }]
keywords = ["geospatial", "vertical-datum", "EGM96", "EGM2008", "DEM", "DTED", "GeoTIFF"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = ["numpy>=1.22", "scipy>=1.7", "GDAL>=3.11", "numba>=0.60", "tqdm>=4.60"]

[project.optional-dependencies]
core = ["numpy>=1.22", "scipy>=1.7", "GDAL>=3.11"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.4"]

[project.scripts]
egmtrans = "egmtrans.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B"]
ignore = ["B905"]  # zip() strict= not needed for same-length numpy arrays

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
